# genetic_optimisation

./: CMakeLists.txt  README.md  genetic_optimisation.h  main.cpp
include/: operationalPoint.h  propulsion_system.h
include/matplotlib-cpp/: matplotlibcpp.h
include/unsupported/: pythonMethods.h
src/: opt_propulsion_system.cpp
